<resources>
    <string name="app_name">滴~到家</string>

    <!--toolbar常量声明-->
    <string name="menu_search">search</string>
    <string name="menu_notifications">notifications</string>
    <string name="menu_settings">settings</string>
    <string name="menu_about_us">about_us</string>
    <string name="home_page">home_page</string>

    <string name="icon">icon</string>

    <!--tab title-->
    <string name="life_title">生活</string>
    <string name="mall_title">社区商城</string>
    <string name="card_title">获取微卡</string>
    <string name="personal_title">我的</string>


    <string name="send_card_title">给亲友微卡</string>
    <string name="send_card_visit_address">来访地址 ：</string>
    <string name="send_card_visitor_name">访客姓名 ：</string>
    <string name="send_card_visitor_phone">手机号码 ：</string>
    <string name="send_card_visitor_phone_hint">请输入手机号码</string>
    <string name="send_card_visitor_name_hint">请输入姓名</string>
    <string name="send_card_visitor_address_hint">请选择地址</string>
    <string name="create_card">生成串门微卡</string>

    <string name="developing">正  在  开  发</string>
    <string name="develop_title">title</string>

    <string name="log_title">往来日志</string>
    <string name="message_title">我的消息</string>
    <string name="mycell">我的小区</string>

    <string name="my_entrance_guard">我的门禁</string>
    <string name="access_control_application">门禁申请</string>
    <string name="family_micro_card">家属微卡</string>
    <string name="problem_feedback">使用说明</string>
    <string name="about_micro_card">关于微卡</string>
    <string name="tel">客服电话</string>
    <string name="modify_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="app_login">畅顺微卡\n您安全的守护者</string>

    <string name="Information_announcement">信息公告</string>
    <string name="equipment_warranty">设备报修</string>
    <string name="home_service">家政服务</string>
    <string name="community_service">社区服务</string>
    <string name="service_complaint">服务投诉</string>
    <string name="ComunityMall">社区商城</string>
    <string name="submit">提交</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址 ：</string>

    <string name="search">搜索：</string>
    <string name="province_title">请选择省份</string>
    <string name="city_title">请选择城市</string>
    <string name="zone_title">请选择区/县</string>
    <string name="province">省份：</string>
    <string name="region">地区：</string>
    <string name="County">县区：</string>
    <string name="street">街道：</string>
    <string name="village">小区：</string>
    <string name="building_no">栋号：</string>
    <string name="unit">楼层：</string>
    <string name="room_number">房号：</string>
    <string name="mobile_phone">手机：</string>
    <string name="full_name">姓名：</string>
    <string name="community_name">请选择小区</string>
    <string name="block_name">请选择楼栋</string>
    <string name="floor_name">请选择楼层</string>
    <string name="owner_phone">业主号码:</string>

    <string name="upload_apply">提交申请</string>

    <string name="original_password">原始密码：</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="preservation">保存</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="family_member_name">家属名称:</string>
    <string name="family_member_phone">手机号码:</string>
    <string name="family_member_pwd">用户密码:</string>
    <string name="family_member_start_time">开始时间:</string>
    <string name="family_member_end_time">终止时间:</string>



    <!--login-->
    <string name="intput_psw">1234567890.,zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="register_title">注册</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="forget_pwd_title_next">下一步</string>

     <string name="app_desc">畅顺微卡APP是一款智能门禁和智慧社区管理的服务类软件，
         通过互联网把手机APP和云计算等信息技术完美结合，把钥匙和门禁卡的功能进行升华，
         以社区服务为基础搭建物业和业主的沟通桥梁，
         为社区住户和物业管理公司打造更加便捷高效的社区交流智能化平台。</string>
    <string name="app_manual1">业主您好：\n
          为加强出入口管理，提高小区的安全等级，营造智慧、安全、和谐的居住环境，本小区将启用微卡出入口管理系统。业主注册申请使用微卡流程：
    </string>
    <string name="app_manual2">一、客户端下载\n
1．安卓Android系统手机：到app应用商店搜索下载“微卡开门”或者用扫描工具（包括所有二维码扫描应用，微信扫一扫，qq扫一扫）扫描二维码下载“微卡开门”。
    </string>
    <string name="app_manual3">2.苹果IOS系统手机：到app  store搜索下载“微卡开门”或者用扫描工具（包括所有二维码扫描应用，微信扫一扫，qq扫一扫）扫描二维码下载“微卡开门”
扫描二维码下载客户端。
    </string>
    <string name="app_manual4">二、客户端申请\n
1．先要点击注册账户
注册完毕后，再申请。

2．在“申请微卡”界面登记小区：
打开“微卡”,点击右下角“我的”，点开页面“门禁申请”，填写增加注册常驻小区的地址。等待物业系统审核
    </string>
    <string name="app_manual5">3．微卡启用后，业主可用手机扫描二维码自由进出小区。访客通过受访业主手机发送的电子临时微卡，手机扫码进出访问小区。保安对持有临时电子微卡的访客将不再进行人工登记或询问。</string>
    <string name="app_manual6">三、使用操作\n
1、当您有多张门禁后，点击红框部分，会按顺序依次切换门禁所属地址。
依次点击主页“我的---我的门禁”可查询到您账号下所有门禁，点击我的门禁界面的任一门禁即可将该门禁设置为当前门禁。\n
2、点击黄框按钮可将当前门禁二维码通过短信（彩信形式）、微信、QQ途径分享，二维码有效时间为二小时。\n
3、点击紫框按钮可以显示当前门禁的二维码，该二维码可以开启小区大门及对应的楼栋门，将二维码对准门禁的识别口即可开门。
</string>
    <string name="app_manual7">4、点击依次点击主页“生活----给亲友微卡”，可到亲友二维码分享界面。
 当您有多张门禁时，点击红框部分按钮，会出现门禁选择界面，点击对应门禁，填写亲友名字就可将对应的门禁二维码通过短信（彩信形式）、微信、QQ途径分享给亲友，该界面分享产生的记录将会被记录在“生活-----往来日志界面”。（点击主页“我的----我的小区----设备报修”，该界面的小区地址点击后也会出现门禁选择界面）\n
5．当忘记所属门禁密码时，可通过手机验证码获取新密码。
</string>
    <string name="app_manual8">\n  手机就是钥匙，串门就像主人。让我们一起营造智能安全和谐的智慧社区。\n\n\n</string>
</resources>