<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar" />

    <LinearLayout
        style="@style/send_card_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/send_card_Linear_Left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_card_visit_address" />

        <EditText
            android:id="@+id/address_edit"
            style="@style/send_card_linear_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/send_card_visitor_address_hint"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <LinearLayout
        style="@style/send_card_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/send_card_Linear_Left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_card_visitor_name" />

        <EditText
            android:id="@+id/name_edit"
            style="@style/send_card_linear_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/send_card_visitor_name_hint"
            android:background="@null"/>
    </LinearLayout>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:background="@color/blue_line"-->
        <!--/>-->
    <!--<LinearLayout-->
        <!--style="@style/send_card_linear"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--style="@style/send_card_Linear_Left"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/send_card_visitor_phone" />-->

        <!--<EditText-->
            <!--android:id="@+id/uesr_phone_edit"-->
            <!--style="@style/send_card_linear_edit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="phone"-->
            <!--android:hint="@string/send_card_visitor_phone_hint"-->
            <!--android:background="@null"/>-->
    <!--</LinearLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <Button

        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_finsh"
        android:text="@string/create_card" />

</LinearLayout>
