<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_line"
    android:scrollbars="none">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/layout"
            layout="@layout/header_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_stroke_gray_background">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/wodexiaoqu"/>
        <TextView
            android:id="@+id/cell"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="17sp"
            android:text="@string/mycell" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_stroke_gray_background">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/wodemenjin"/>
        <TextView
            android:id="@+id/entrance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="17sp"
            android:text="@string/my_entrance_guard" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_stroke_gray_background">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/menjinshenqing"/>
        <TextView
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="17sp"
            android:text="@string/access_control_application" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_stroke_gray_background">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/jiashuweika"/>
        <TextView
            android:id="@+id/micro_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="17sp"
            android:text="@string/family_micro_card" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_stroke_gray_background">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/wentifankui"/>
        <TextView
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black_text"
            android:textSize="17sp"
            android:text="@string/problem_feedback" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_stroke_gray_background">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@mipmap/guanyuweika"/>
    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textColor="@color/black_text"
        android:textSize="17sp"
        android:text="@string/about_micro_card" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_stroke_gray_background"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:src="@mipmap/mimaxiugai"/>
            <TextView
                android:id="@+id/modify_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black_text"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:text="@string/modify_password" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="@color/blue_line"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_stroke_gray_background"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:src="@mipmap/tuichudenglu"/>
            <TextView
                android:id="@+id/loginout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black_text"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:text="@string/exit_login" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>