<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/original_password"
            android:textColor="@color/black_text"
            android:textSize="15sp"

            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textPassword"
            android:padding="5dp"
            android:hint="请输入原始密码"
            android:textColor="@color/black_text"
            android:textSize="15sp"
            android:id="@+id/old_pwd_edt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/new_password"
            android:textColor="@color/black_text"
            android:textSize="15sp"

            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textPassword"
            android:padding="5dp"
            android:hint="请输入新密码"
            android:textColor="@color/black_text"
            android:textSize="15sp"
            android:id="@+id/new_pwd_edt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black_text"
            android:textSize="15sp"

            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textPassword"
            android:padding="5dp"
            android:hint="确认密码"
            android:textColor="@color/black_text"
            android:textSize="15sp"
            android:id="@+id/comfirm_pwd_edt" />
    </LinearLayout>

    <TextView
        android:id="@+id/password_warn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:text="* 密码设置至少6位数" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/preservation"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_finsh"
        android:id="@+id/modify_btn" />


</LinearLayout>
